# llm-wiki

./: .gitignore  README.md  llm-wiki-ref.md  pyproject.toml
.comate/specs/llm-wiki/: summary.md  tasks.md
.comate/specs/llm-wiki-tool/: doc.md  tasks.md
.comate/specs/wiki-root-dir/: doc.md  summary.md  tasks.md
hack/docs/: usage.md
hack/releasenotes/: 0.2.0.md
llm_wiki/: cli.py  config.py  contradiction.py  frontmatter.py  ingest.py  ingest_interactive.py  ingest_optimized.py  link_graph.py  lint.py  llm.py  merge_strategies.py  page_selector.py  qmd_retriever.py  query.py  schema_analyzer.py  server.py  simple_embedder.py  wiki.py  wiki_log.py
web/: package-lock.json  package.json
web/src/: App.tsx  index.css  main.tsx
web/src/components/: HelpManual.tsx  LanguageSelector.tsx  MarkdownViewer.tsx
web/src/i18n/: index.ts
web/src/i18n/locales/: en.ts  zh.ts
web/src/pages/: Dashboard.tsx  GraphPage.tsx  IngestInteractivePage.tsx  IngestPage.tsx  LintPage.tsx  QueryPage.tsx  WikiBrowser.tsx
web/src/services/: api.ts
